add create user and delete user (class 9)
