# ginchat/router/router.go
@@ -16,5 +16,7 @@ func Router() *gin.Engine {
 
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserList)
+	r.POST("/user/createUser", service.CreateUser)
+	r.POST("/user/deleteUser", service.DeleteUser)
 	return r
 }
